include/turbo/turbo.h

typedef struct turbo_buffer    turbo_buffer;    /* memory on host or device */
typedef struct turbo_result    turbo_result;    /* outputs of one run       */
/* Caller-owned. On success code is 0 and message[0] is 0. */
typedef struct turbo_error {
    uint32_t struct_size;
    int32_t  code;
    uint32_t field;     /* 1-based field index for the two errors that name one, else 0 */
    char     message[TURBO_ERROR_MESSAGE_LEN];   /* NUL-terminated UTF-8 */
} turbo_error;
/* ---- Result ------------------------------------------------------------ */

/* One summary per run: what produced it and what it cost. */
typedef struct turbo_result_info {
    uint32_t struct_size;
    uint32_t batch;
    uint32_t dim;
    uint32_t dtype;                            /* TURBO_DTYPE_* of the vectors */
    uint32_t placement;                        /* TURBO_PLACE_* where they are now */
    uint32_t device;                           /* runtime device index */
    uint64_t bytes;
    uint32_t stage[TURBO_STAGE_COUNT];         /* TURBO_STAGE_HOST / DEVICE / FUSED / UNUSED */
    uint32_t reserved;
    uint64_t h2d_bytes;                        /* every byte that crossed to the device in this run */
    uint64_t d2h_bytes;                        /* every byte that crossed back, including reads */
    uint64_t host_allocs;                      /* heap allocations on the run path */
    uint64_t device_allocs;                    /* device allocations on the run path */
    char     backend[32];
    char     arch[32];
    char     runtime_version[64];
    char     artifact_sha256[72];
    char     tokenizer_sha256[72];
} turbo_result_info;
int32_t turbo_result_get_info(turbo_result *r, turbo_result_info *out, turbo_error *err);
/* Copy the vectors into dst (capacity bytes). Counted in d2h_bytes. */
int32_t turbo_result_read(turbo_result *r, void *dst, uint64_t capacity, uint64_t *written, turbo_error *err);
/* The vectors where they are, without a copy. The buffer keeps the result alive. */
int32_t turbo_result_buffer(turbo_result *r, turbo_buffer **out, turbo_error *err);
void    turbo_result_release(turbo_result *r);