bindings/java/src/main/java/ai/pipestream/turbo/ffi/TurboNative.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_result_get_info(turbo_result *r, turbo_result_info *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_result_get_info$handle() {
        return turbo_result_get_info.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_result_get_info(turbo_result *r, turbo_result_info *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_result_get_info$address() {
        return turbo_result_get_info.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_result_get_info(turbo_result *r, turbo_result_info *out, turbo_error *err)
     * }
     */
    public static int turbo_result_get_info(MemorySegment r, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_result_get_info.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_result_get_info", r, out, err);
            }
            return (int)mh$.invokeExact(r, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_result_output_info {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_result_output_info");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_result_output_info(turbo_result *r, uint32_t index, turbo_tensor_info *out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_result_output_info$descriptor() {
        return turbo_result_output_info.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_result_output_info(turbo_result *r, uint32_t index, turbo_tensor_info *out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_result_output_info$handle() {
        return turbo_result_output_info.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_result_output_info(turbo_result *r, uint32_t index, turbo_tensor_info *out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_result_output_info$address() {
        return turbo_result_output_info.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_result_output_info(turbo_result *r, uint32_t index, turbo_tensor_info *out, turbo_error *err)
     * }
     */
    public static int turbo_result_output_info(MemorySegment r, int index, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_result_output_info.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_result_output_info", r, index, out, err);
            }
            return (int)mh$.invokeExact(r, index, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_result_buffer {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_result_buffer");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_result_buffer(turbo_result *r, uint32_t index, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_result_buffer$descriptor() {
        return turbo_result_buffer.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_result_buffer(turbo_result *r, uint32_t index, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_result_buffer$handle() {
        return turbo_result_buffer.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_result_buffer(turbo_result *r, uint32_t index, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_result_buffer$address() {
        return turbo_result_buffer.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_result_buffer(turbo_result *r, uint32_t index, turbo_buffer **out, turbo_error *err)
     * }
     */
    public static int turbo_result_buffer(MemorySegment r, int index, MemorySegment out, MemorySegment err) {
        var mh$ = turbo_result_buffer.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_result_buffer", r, index, out, err);
            }
            return (int)mh$.invokeExact(r, index, out, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_result_read {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_LONG,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_result_read");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_result_read(turbo_result *r, uint32_t index, void *dst, uint64_t capacity, uint64_t *written, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_result_read$descriptor() {
        return turbo_result_read.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_result_read(turbo_result *r, uint32_t index, void *dst, uint64_t capacity, uint64_t *written, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_result_read$handle() {
        return turbo_result_read.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_result_read(turbo_result *r, uint32_t index, void *dst, uint64_t capacity, uint64_t *written, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_result_read$address() {
        return turbo_result_read.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_result_read(turbo_result *r, uint32_t index, void *dst, uint64_t capacity, uint64_t *written, turbo_error *err)
     * }
     */
    public static int turbo_result_read(MemorySegment r, int index, MemorySegment dst, long capacity, MemorySegment written, MemorySegment err) {
        var mh$ = turbo_result_read.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_result_read", r, index, dst, capacity, written, err);
            }
            return (int)mh$.invokeExact(r, index, dst, capacity, written, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_result_spans {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_result_spans");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t turbo_result_spans(turbo_result *r, turbo_span *dst, uint32_t capacity, uint32_t *count, turbo_error *err)
     * }
     */
    public static FunctionDescriptor turbo_result_spans$descriptor() {
        return turbo_result_spans.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t turbo_result_spans(turbo_result *r, turbo_span *dst, uint32_t capacity, uint32_t *count, turbo_error *err)
     * }
     */
    public static MethodHandle turbo_result_spans$handle() {
        return turbo_result_spans.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t turbo_result_spans(turbo_result *r, turbo_span *dst, uint32_t capacity, uint32_t *count, turbo_error *err)
     * }
     */
    public static MemorySegment turbo_result_spans$address() {
        return turbo_result_spans.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t turbo_result_spans(turbo_result *r, turbo_span *dst, uint32_t capacity, uint32_t *count, turbo_error *err)
     * }
     */
    public static int turbo_result_spans(MemorySegment r, MemorySegment dst, int capacity, MemorySegment count, MemorySegment err) {
        var mh$ = turbo_result_spans.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_result_spans", r, dst, capacity, count, err);
            }
            return (int)mh$.invokeExact(r, dst, capacity, count, err);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_result_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_result_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void turbo_result_release(turbo_result *r)
     * }
     */
    public static FunctionDescriptor turbo_result_release$descriptor() {
        return turbo_result_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void turbo_result_release(turbo_result *r)
     * }
     */
    public static MethodHandle turbo_result_release$handle() {
        return turbo_result_release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void turbo_result_release(turbo_result *r)
     * }
     */
    public static MemorySegment turbo_result_release$address() {
        return turbo_result_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void turbo_result_release(turbo_result *r)
     * }
     */
    public static void turbo_result_release(MemorySegment r) {
        var mh$ = turbo_result_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("turbo_result_release", r);
            }
            mh$.invokeExact(r);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class turbo_generation_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            TurboNative.C_INT,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER,
            TurboNative.C_POINTER
        );

        public static final MemorySegment ADDR = TurboNative.findOrThrow("turbo_generation_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
